specs/016-generics/examples/invalid/cannot-infer.ts
function unusable<T>(x: int): int {
  return x;
}

console.log(unusable(5));
